force-app/main/default/objects/Service_Category__mdt/Service_Category__mdt.object-meta.xml
<CustomObject>
    <label>Service Category</label>
    <pluralLabel>Service Categories</pluralLabel>
</CustomObject>