force-app/main/default/objects/Service_Category__mdt/fields/Default_Queue__c.field-meta.xml
<CustomField>
    <fullName>Default_Queue__c</fullName>
    <label>Default Queue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>