force-app/main/default/objects/Service_Category__mdt/fields/Requires_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Approval</label>
    <type>Checkbox</type>
</CustomField>